--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
 /bin/
+
+bigdatademo/target/maven-archiver/pom.properties
+
+javastone/.classpath
+
+javastone/.project
+
+javastone/.settings/org.eclipse.m2e.core.prefs
+
+javastone/.settings/org.eclipse.jdt.core.prefs
+
+bigdatademo/target/maven-archiver/pom.properties
+
+bigdatademo/target/maven-archiver/pom.properties
+
+bigdatademo/target/maven-archiver/pom.properties
