--- a/javastone/pom.xml
+++ b/javastone/pom.xml
@@ -23,6 +23,16 @@
 			<artifactId>cglib-nodep</artifactId>
 			<version>2.2.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.neo4j</groupId>
+			<artifactId>neo4j</artifactId>
+			<version>2.2.2</version>
+		</dependency>
+		<!-- <dependency>
+			<groupId>org.neo4j.driver</groupId>
+			<artifactId>neo4j-java-driver</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency> -->
 	</dependencies>
 
 	<build>
