--- a/javastone/pom.xml
+++ b/javastone/pom.xml
@@ -28,12 +28,30 @@
 			<artifactId>neo4j</artifactId>
 			<version>2.2.2</version>
 		</dependency>
-		<!-- <dependency>
-			<groupId>org.neo4j.driver</groupId>
-			<artifactId>neo4j-java-driver</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency> -->
+
+
+		<dependency>
+			<groupId>org.neo4j.test</groupId>
+			<artifactId>neo4j-harness</artifactId>
+			<version>2.2.2</version>
+
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-neo4j</artifactId>
+			<version>3.3.2.RELEASE</version>
+		</dependency>
+
+<dependency>
+	<groupId>javax.validation</groupId>
+	<artifactId>validation-api</artifactId>
+	<version>1.1.0.Final</version>
+</dependency>
+		<!-- <dependency> <groupId>org.neo4j.driver</groupId> <artifactId>neo4j-java-driver</artifactId> 
+			<version>1.0-SNAPSHOT</version> </dependency> -->
 	</dependencies>
+
+
 
 	<build>
 		<plugins>
