--- a/bigdatademo/pom.xml
+++ b/bigdatademo/pom.xml
@@ -95,7 +95,7 @@
 			<artifactId>spark-streaming_2.10</artifactId>
 			<version>1.4.1</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-streaming-flume_2.10</artifactId>
@@ -134,6 +134,17 @@
 			<groupId>org.scala-lang</groupId>
 			<artifactId>scala-library</artifactId>
 			<version>2.11.6</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-java</artifactId>
+			<version>0.9.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-clients</artifactId>
+			<version>0.9.0</version>
 		</dependency>
 	</dependencies>
 </project>
