--- a/javastone/pom.xml
+++ b/javastone/pom.xml
@@ -90,7 +90,7 @@
 			<artifactId>protostuff-compiler</artifactId>
 			<version>1.0.9</version>
 		</dependency>
-			<dependency>
+		<dependency>
 			<groupId>com.dyuproject.protostuff</groupId>
 			<artifactId>protostuff-xml</artifactId>
 			<version>1.0.9</version>
@@ -108,12 +108,7 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.7.7</version>
 		</dependency>
-		<!-- Netty -->
-		<dependency>
-			<groupId>io.netty</groupId>
-			<artifactId>netty-all</artifactId>
-			<version>4.0.24.Final</version>
-		</dependency>
+		
 		<!-- ZooKeeper -->
 		<dependency>
 			<groupId>org.apache.zookeeper</groupId>
@@ -158,6 +153,12 @@
 			<groupId>com.thoughtworks.xstream</groupId>
 			<artifactId>xstream</artifactId>
 			<version>1.4.8</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+			<version>5.0.0.Alpha2</version>
 		</dependency>
 	</dependencies>
 
