--- a/javastone/pom.xml
+++ b/javastone/pom.xml
@@ -181,6 +181,16 @@
 			<artifactId>metrics-core</artifactId>
 			<version>2.2.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.barchart.udt</groupId>
+			<artifactId>barchart-udt-bundle</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-transport-sctp</artifactId>
+			<version>5.0.0.Alpha2</version>
+		</dependency>
 	</dependencies>
 
 
