--- a/javastone/pom.xml
+++ b/javastone/pom.xml
@@ -191,6 +191,12 @@
 			<artifactId>netty-transport-sctp</artifactId>
 			<version>5.0.0.Alpha2</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.mortbay.jetty.npn</groupId>
+			<artifactId>npn-boot</artifactId>
+			<version>8.1.2.v20120308</version>
+		</dependency>
 	</dependencies>
 
 
