--- a/javastone/pom.xml
+++ b/javastone/pom.xml
@@ -197,6 +197,12 @@
 			<artifactId>npn-boot</artifactId>
 			<version>8.1.2.v20120308</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.5.1</version>
+		</dependency>
 	</dependencies>
 
 
