--- a/javawebstone/pom.xml
+++ b/javawebstone/pom.xml
@@ -15,6 +15,7 @@
 		<mysql.version>5.1.32</mysql.version>
 		<mybatis.version>3.2.7</mybatis.version>
 		<mybatis-spring.version>1.2.2</mybatis-spring.version>
+		<jdk.version>1.7</jdk.version>
 	</properties>
 
 	<dependencies>
@@ -28,12 +29,7 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>5.0.2.Final</version>
 		</dependency>
-		<dependency>
-			<groupId>net.sf.json-lib</groupId>
-			<artifactId>json-lib</artifactId>
-			<version>2.4</version>
-			<classifier>jdk15</classifier>
-		</dependency>
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
@@ -240,7 +236,7 @@
 			<version>4.2.0</version>
 		</dependency>
 
-		<dependency>
+	 <dependency>
 		  <groupId>com.sun.mail</groupId>
 		  <artifactId>javax.mail</artifactId>
 		  <version>1.5.1</version>
@@ -270,6 +266,16 @@
 					</connectors>
 				</configuration>
 			</plugin>
+			
+			   <plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-compiler-plugin</artifactId>
+			    <configuration>
+			     <source>1.7</source>
+			     <target>1.7</target>
+			     <encoding>UTF-8</encoding>
+			    </configuration>
+			   </plugin>
 		</plugins>
 	</build>
 </project>
