--- a/javastone/pom.xml
+++ b/javastone/pom.xml
@@ -209,6 +209,24 @@
 			<artifactId>guava</artifactId>
 			<version>19.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.jboss.marshalling</groupId>
+			<artifactId>jboss-marshalling</artifactId>
+			<version>1.3.15.GA</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.jboss.marshalling</groupId>
+			<artifactId>jboss-marshalling-serial</artifactId>
+			<version>1.3.15.GA</version>
+		</dependency>
+		
+		<dependency>
+  <groupId>org.jboss.marshalling</groupId>
+  <artifactId>jboss-marshalling-river</artifactId>
+  <version>1.3.15.GA</version>
+</dependency>
 	</dependencies>
 
 
