--- a/chinalife/.gitignore
+++ b/chinalife/.gitignore
@@ -1,1 +1,25 @@
-/target/
+.settings
+.classpath
+.gitignore
+.project
+target
+../.project
+.DS_Store
+.#webclasspath
+
+*/.settings
+*/.classpath
+*/.gitignore
+*/.project
+*/target
+*/.DS_Store
+*/.#webclasspath
+
+*/**/.settings
+*/**/.classpath
+*/**/.gitignore
+*/**/.project
+*/**/target
+*/**/.DS_Store
+*/**/.#webclasspath
+*/**/*.log
