客户列表加电话 修改保单和统计页面客户的查询逻辑

--- a/chinalife/src/main/resources/config.properties
+++ b/chinalife/src/main/resources/config.properties
@@ -1,5 +1,6 @@
 jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.jdbcUrl=jdbc:mysql://localhost:3306/renshou
+jdbc.jdbcUrl=jdbc:mysql://112.125.120.150:3306/renshou
+#112.125.120.150
 jdbc.user=root
 jdbc.password=123456
 jdbc.initialPoolSize=3
