--- a/chinalife/pom.xml
+++ b/chinalife/pom.xml
@@ -130,6 +130,17 @@
 			<artifactId>velocity</artifactId>
 			<version>1.7</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.6.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.6.2</version>
+		</dependency>
 	</dependencies>
 
 	<!-- 打包成war可以运行mvn war:war会在target下生成对应文件 -->
